--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.herosection{
+    background-image: url('/src/Images/bg_img.jpg');
+    background-size:cover;
+    background-position: center;
+}
+
+/* Add this CSS to your stylesheet */
+.slider-container {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    width: 100%; /* Adjust as per your design */
+  }
+  
+  .slider-wrapper {
+    display: flex;
+    transition: transform 0.5s ease-in-out; /* Smooth sliding */
+  }
+  
+  .slide {
+    min-width: 100%; /* Ensure each card takes full width */
+    flex-shrink: 0;
+  }
+  
